--- a/languages/ml/haskell/haskell.org
+++ b/languages/ml/haskell/haskell.org
@@ -47,6 +47,7 @@
 ** module (and exports)
 - each file contains a module
 - the basic unit of organization in Haskell
+- the module ~Main~ that defines *main*, can have any filename
 - src/Examples/ExampleOne.hs -> Examples.ExampleOne
 |--------------------------------------+---------------------------------------------|
 |                                  <r> |                                             |
@@ -270,124 +271,133 @@ https://www.cse.chalmers.se/edu/year/2018/course/TDA452_Functional_Programming/t
 *** base
 - https://hackage.haskell.org/package/base
 - https://hackage.haskell.org/package/base/docs/Prelude.html
-|------------------------+-------------------------------------------------------------|
-| module                 | fn                                                          |
-|------------------------+-------------------------------------------------------------|
-| [[https://hackage.haskell.org/package/base/docs/Control-Applicative.html][Control.Applicative]]    |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Control-Arrow.html][Control.Arrow]]          |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Control-Category.html][Control.Category]]       |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Control-Concurrent.html][Control.Concurrent]]     |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Control-Exception-Safe.html][Control.Exception.Safe]] | tryAny :: IO a -> IO (Either SomeException a)               |
-| [[https://hackage.haskell.org/package/base/docs/Control-Monad.html][Control.Monad]]          | sequence  :: (Traversable t, Monad m) => t (m a) -> m (t a) |
-|                        | sequence_ :: (Foldable t, Monad m) => t (m a) -> m ()       |
-|                        | forever   :: Applicative f => f a  -> f b                   |
-|                        | when      :: Applicative f => Bool -> f () -> f ()          |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bifoldable.html][Data.Bifoldable]]        |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bifoldable1.html][Data.Bifoldable1]]       |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bifunctor.html][Data.Bifunctor]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bitraversable.html][Data.Bitraversable]]     |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bits.html][Data.Bits]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Bool.html][Data.Bool]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Char.html][Data.Char]]              | isPrint                                                     |
-| [[https://hackage.haskell.org/package/base/docs/Data-Coerce.html][Data.Coerce]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Complex.html][Data.Complex]]           |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Data.html][Data.Data]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Dynamic.html][Data.Dynamic]]           |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Either.html][Data.Either]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Eq.html][Data.Eq]]                |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Fixed.html][Data.Fixed]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Foldable.html][Data.Foldable]]          |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Foldable1.html][Data.Foldable1]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Function.html][Data.Function]]          |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Functor.html][Data.Functor]]           |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-IORef.html][Data.IORef]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Int.html][Data.Int]]               |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Ix.html][Data.Ix]]                |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Kind.html][Data.Kind]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-List.html][Data.List]]              | permutations splitAt                                        |
-| [[https://hackage.haskell.org/package/base/docs/Data-Maybe.html][Data.Maybe]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Monoid.html][Data.Monoid]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Ord.html][Data.Ord]]               |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Proxy.html][Data.Proxy]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Ratio.html][Data.Ratio]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-STRef.html][Data.STRef]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Semigroup.html][Data.Semigroup]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-String.html][Data.String]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Traversable.html][Data.Traversable]]       |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Tuple.html][Data.Tuple]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Typeable.html][Data.Typeable]]          |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Unique.html][Data.Unique]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Version.html][Data.Version]]           |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Void.html][Data.Void]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Data-Word.html][Data.Word]]              |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/Foreign.html][Foreign]]                | interfacing with another programming language               |
-| [[https://hackage.haskell.org/package/base/docs/System-CPUTime.html][System.CPUTime]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Console.html][System.Console]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Environment.html][System.Environment]]     | getArgs  :: IO [String]                                     |
-|                        | withArgs :: [String] -> IO a -> IO a                        |
-| [[https://hackage.haskell.org/package/base/docs/System-Exit.html][System.Exit]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Info.html][System.Info]]            |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Mem.html][System.Mem]]             |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Posix.html][System.Posix]]           |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-Timeout.html][System.Timeout]]         |                                                             |
-| [[https://hackage.haskell.org/package/base/docs/System-IO.html][System.IO]]              | openFile     :: FilePath -> IOMode -> IO Handle             |
-|                        | hClose       :: Handle -> IO ()                             |
-|                        | hGetContents :: Handle -> IO String                         |
-|                        | hputStrLn    :: Handle -> IO ()                             |
-|                        | putStrLn     :: String -> IO ()                             |
-|                        | stdout       :: Handle                                      |
-| [[https://hackage.haskell.org/package/base/docs/Text-ParserCombinators.html][Text.ParserCombinators]] |                                                             |
-|------------------------+-------------------------------------------------------------|
+|------------------------+------------------------------------------------------------------|
+| module                 | fn                                                               |
+|------------------------+------------------------------------------------------------------|
+| [[https://hackage.haskell.org/package/base/docs/Control-Applicative.html][Control.Applicative]]    |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Control-Arrow.html][Control.Arrow]]          |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Control-Category.html][Control.Category]]       |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Control-Concurrent.html][Control.Concurrent]]     |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Control-Exception.html][Control.Exception]]      | catch   :: Exception e => IO a    -> (e -> IO a) -> IO a         |
+|                        | ioError ::                IOError -> IO a                        |
+|                        | throw   :: Exception e => e       -> a                           |
+|                        | throwIO :: Exception e => e       -> IO a                        |
+| [[https://hackage.haskell.org/package/base/docs/Control-Exception-Safe.html][Control.Exception.Safe]] | tryAny :: IO a -> IO (Either SomeException a)                    |
+| [[https://hackage.haskell.org/package/base/docs/Control-Monad.html][Control.Monad]]          | sequence  :: (Traversable t, Monad m) => t (m a) -> m (t a)      |
+|                        | sequence_ :: (Foldable t, Monad m) => t (m a) -> m ()            |
+|                        | forever   :: Applicative f => f a  -> f b                        |
+|                        | when      :: Applicative f => Bool -> f () -> f ()               |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bifoldable.html][Data.Bifoldable]]        |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bifoldable1.html][Data.Bifoldable1]]       |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bifunctor.html][Data.Bifunctor]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bitraversable.html][Data.Bitraversable]]     |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bits.html][Data.Bits]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Bool.html][Data.Bool]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Char.html][Data.Char]]              | isPrint                                                          |
+| [[https://hackage.haskell.org/package/base/docs/Data-Coerce.html][Data.Coerce]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Complex.html][Data.Complex]]           |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Data.html][Data.Data]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Dynamic.html][Data.Dynamic]]           |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Either.html][Data.Either]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Eq.html][Data.Eq]]                |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Fixed.html][Data.Fixed]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Foldable.html][Data.Foldable]]          | for_ :: (Foldable t, Applicative f) => t a -> (a -> f b) -> f () |
+| [[https://hackage.haskell.org/package/base/docs/Data-Foldable1.html][Data.Foldable1]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Function.html][Data.Function]]          |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Functor.html][Data.Functor]]           |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-IORef.html][Data.IORef]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Int.html][Data.Int]]               |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Ix.html][Data.Ix]]                |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Kind.html][Data.Kind]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-List.html][Data.List]]              | permutations splitAt                                             |
+| [[https://hackage.haskell.org/package/base/docs/Data-Maybe.html][Data.Maybe]]             | maybe listToMaybe maybeToList                                    |
+| [[https://hackage.haskell.org/package/base/docs/Data-Monoid.html][Data.Monoid]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Ord.html][Data.Ord]]               |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Proxy.html][Data.Proxy]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Ratio.html][Data.Ratio]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-STRef.html][Data.STRef]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Semigroup.html][Data.Semigroup]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-String.html][Data.String]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Traversable.html][Data.Traversable]]       |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Tuple.html][Data.Tuple]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Typeable.html][Data.Typeable]]          |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Unique.html][Data.Unique]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Version.html][Data.Version]]           |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Void.html][Data.Void]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Data-Word.html][Data.Word]]              |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/Foreign.html][Foreign]]                | interfacing with another programming language                    |
+| [[https://hackage.haskell.org/package/base/docs/System-CPUTime.html][System.CPUTime]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Console.html][System.Console]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Environment.html][System.Environment]]     | getArgs  :: IO [String]                                          |
+|                        | withArgs :: [String] -> IO a -> IO a                             |
+| [[https://hackage.haskell.org/package/base/docs/System-Exit.html][System.Exit]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Info.html][System.Info]]            |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Mem.html][System.Mem]]             |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Posix.html][System.Posix]]           |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-Timeout.html][System.Timeout]]         |                                                                  |
+| [[https://hackage.haskell.org/package/base/docs/System-IO.html][System.IO]]              | openFile     :: FilePath -> IOMode -> IO Handle                  |
+|                        | hClose       :: Handle -> IO ()                                  |
+|                        | hGetContents :: Handle -> IO String                              |
+|                        | hputStrLn    :: Handle -> IO ()                                  |
+|                        | putStrLn     :: String -> IO ()                                  |
+|                        | stdout       :: Handle                                           |
+| [[https://hackage.haskell.org/package/base/docs/System-IO-Error.html][System.IO.Error]]        | userError    :: String -> IOError                                |
+| [[https://hackage.haskell.org/package/base/docs/Text-ParserCombinators.html][Text.ParserCombinators]] |                                                                  |
+|------------------------+------------------------------------------------------------------|
 *** non base
 https://haskell-containers.readthedocs.io/en/latest/
-|------------------+-----------------------------------|
-| [[https://hackage.haskell.org/package/array][array]]            | Data.Array                        |
-| [[https://hackage.haskell.org/package/containers][containers]]       | Data.Graph                        |
-|                  | Data.IntMap                       |
-|                  | Data.IntSet                       |
-|                  | Data.Map                          |
-|                  | Data.Sequence                     |
-|                  | Data.Set                          |
-|                  | Data.Tree                         |
-| [[https://hackage.haskell.org/package/binary][binary]]           | Data.Binary                       |
-| [[https://hackage.haskell.org/package/bytestring][bytestring]]       | Data.ByteString                   |
-| [[https://hackage.haskell.org/package/deepseq][deepseq]]          | Control.DeepSeq                   |
-| [[https://hackage.haskell.org/package/directory][directory]]        | System.Directory                  |
-| [[https://hackage.haskell.org/package/exceptions][exceptions]]       | Control.Monad.Catch               |
-| [[https://hackage.haskell.org/package/filepath][filepath]]         | System.(FilePath/OsPath/OsString) |
-| [[https://hackage.haskell.org/package/haskeline][haskeline]]        | System.Console                    |
-| [[https://hackage.haskell.org/package/hoopl][hoopl]]            | Compiler.Hoopl                    |
-| [[https://hackage.haskell.org/package/hpc][hpc]]              | Trace.Hpc                         |
-| [[https://hackage.haskell.org/package/integer-gmp][integer-gmp]]      | GHC.Integer.GMP                   |
-| [[https://hackage.haskell.org/package/libiserv][libiserv]]         |                                   |
-| [[https://hackage.haskell.org/package/mtl][mtl]]              | Control.Monad.Accum               |
-|                  | Control.Monad.Cont                |
-|                  | Control.Monad.Except              |
-|                  | Control.Monad.Identity            |
-|                  | Control.Monad.RWS                 |
-|                  | Control.Monad.Reader              |
-|                  | Control.Monad.Select              |
-|                  | Control.Monad.State               |
-|                  | Control.Monad.Trans               |
-|                  | Control.Monad.Writer              |
-| [[https://hackage.haskell.org/package/network][network]]          | Network.Socket                    |
-| [[https://hackage.haskell.org/package/parsec][parsec]]           | Text.Parsec                       |
-|                  | Text.ParserCombinators.Parsec     |
-| [[https://hackage.haskell.org/package/pretty][pretty]]           | Text.PrettyPrint                  |
-| [[https://hackage.haskell.org/package/process][process]]          | System.Cmd                        |
-|                  | System.Process                    |
-| [[https://hackage.haskell.org/package/terminfo][terminfo]]         | System.Console.Terminfo           |
-| [[https://hackage.haskell.org/package/template-haskell][template-haskell]] | Language.Haskell.TH               |
-| [[https://hackage.haskell.org/package/text][text]]             | Data.Text, more efficient unicode |
-|                  | Text                              |
-|                  | pack                              |
-| [[https://hackage.haskell.org/package/time][time]]             | Data.Time                         |
-| [[https://hackage.haskell.org/package/transformers][transformers]]     | Control.Monad.Trans               |
-| [[https://hackage.haskell.org/package/stm][stm]]              | Control.Concurrent.STM            |
-|                  | Control.Monad.STM                 |
-| [[https://hackage.haskell.org/package/unix][unix]]             | System.Posix                      |
-| [[https://hackage.haskell.org/package/xhtml][xhtml]]            | Text.XHtml                        |
-|------------------+-----------------------------------|
+|------------------+-------------------------------+--------------------------------------|
+|              <r> |              <c>              | <l>                                  |
+|            [[https://hackage.haskell.org/package/array][array]] |          Data.Array           |                                      |
+|       [[https://hackage.haskell.org/package/containers][containers]] |          Data.Graph           |                                      |
+|                  |          Data.IntMap          |                                      |
+|                  |          Data.IntSet          |                                      |
+|                  |           Data.Map            |                                      |
+|                  |         Data.Sequence         |                                      |
+|                  |           Data.Set            |                                      |
+|                  |           Data.Tree           |                                      |
+|           [[https://hackage.haskell.org/package/binary][binary]] |          Data.Binary          |                                      |
+|       [[https://hackage.haskell.org/package/bytestring][bytestring]] |        Data.ByteString        | efficiently dealing with files       |
+|                  |     Data.ByteString.Lazy      | fromStrict toStrict                  |
+|                  |     Data.ByteString.Char8     | instead of Word8                     |
+|          [[https://hackage.haskell.org/package/deepseq][deepseq]] |        Control.DeepSeq        |                                      |
+|        [[https://hackage.haskell.org/package/directory][directory]] |       System.Directory        |                                      |
+|       [[https://hackage.haskell.org/package/exceptions][exceptions]] |      Control.Monad.Catch      |                                      |
+|         [[https://hackage.haskell.org/package/filepath][filepath]] |        System.FilePath        |                                      |
+|                  |         System.OsPath         |                                      |
+|                  |        System.OsString        |                                      |
+|        [[https://hackage.haskell.org/package/haskeline][haskeline]] |        System.Console         |                                      |
+|            [[https://hackage.haskell.org/package/hoopl][hoopl]] |        Compiler.Hoopl         |                                      |
+|              [[https://hackage.haskell.org/package/hpc][hpc]] |           Trace.Hpc           |                                      |
+|      [[https://hackage.haskell.org/package/integer-gmp][integer-gmp]] |        GHC.Integer.GMP        |                                      |
+|         [[https://hackage.haskell.org/package/libiserv][libiserv]] |                               |                                      |
+|              [[https://hackage.haskell.org/package/mtl][mtl]] |      Control.Monad.Accum      |                                      |
+|                  |      Control.Monad.Cont       |                                      |
+|                  |     Control.Monad.Except      |                                      |
+|                  |    Control.Monad.Identity     |                                      |
+|                  |       Control.Monad.RWS       |                                      |
+|                  |     Control.Monad.Reader      |                                      |
+|                  |     Control.Monad.Select      |                                      |
+|                  |      Control.Monad.State      |                                      |
+|                  |      Control.Monad.Trans      |                                      |
+|                  |     Control.Monad.Writer      |                                      |
+|          [[https://hackage.haskell.org/package/network][network]] |        Network.Socket         |                                      |
+|           [[https://hackage.haskell.org/package/parsec][parsec]] |          Text.Parsec          |                                      |
+|                  | Text.ParserCombinators.Parsec |                                      |
+|           [[https://hackage.haskell.org/package/pretty][pretty]] |       Text.PrettyPrint        |                                      |
+|          [[https://hackage.haskell.org/package/process][process]] |          System.Cmd           |                                      |
+|                  |        System.Process         |                                      |
+|         [[https://hackage.haskell.org/package/terminfo][terminfo]] |    System.Console.Terminfo    |                                      |
+| [[https://hackage.haskell.org/package/template-haskell][template-haskell]] |      Language.Haskell.TH      |                                      |
+|             [[https://hackage.haskell.org/package/text][text]] |           Data.Text           | +efficient String and unicode (pack) |
+|                  |      Data.Text.Encoding       | d/encodeUtf8 - to/from ByteString    |
+|             [[https://hackage.haskell.org/package/time][time]] |           Data.Time           |                                      |
+|     [[https://hackage.haskell.org/package/transformers][transformers]] |      Control.Monad.Trans      |                                      |
+|              [[https://hackage.haskell.org/package/stm][stm]] |    Control.Concurrent.STM     |                                      |
+|                  |       Control.Monad.STM       |                                      |
+|             [[https://hackage.haskell.org/package/unix][unix]] |         System.Posix          |                                      |
+|            [[https://hackage.haskell.org/package/xhtml][xhtml]] |          Text.XHtml           |                                      |
+|------------------+-------------------------------+--------------------------------------|
 ** typeclasses
 
 [[https://www.adit.io/imgs/functors/recap.png]]
@@ -476,18 +486,15 @@ https://haskell-containers.readthedocs.io/en/latest/
 #+end_src
 
 
-* Emacs Setup
-
-- http://www.cis.syr.edu/~sueo/cis252/emacs.html
-- Emacs: lsp-mode, lsp-ui, lsp-haskell
-- https://github.com/haskell/haskell-ide-engine
-- https://github.com/soupi/minimal-haskell-emacs (setup)
-- https://github.com/ndmitchell/ghcid "flymake"
-- https://github.com/ndmitchell/hlint "flycheck"
-- https://github.com/chrisdone/hindent "gofmt"
-
 * Codebases
 
+- https://learn-haskell.blog/
+- https://howistart.org/posts/haskell/1/
+- Silly job interview questions in Haskell https://chrispenner.ca/posts/interview
+- Beating C with 80 lines of Haskell: wc
+  - article https://chrispenner.ca/posts/wc
+  - source https://github.com/ChrisPenner/wc
+  - TODO: concurrency...
 - https://wiki.haskell.org/Implement_a_chat_server
 - https://wiki.haskell.org/Roll_your_own_IRC_bot
 - http://stefan.saasen.me/articles/git-clone-in-haskell-from-the-bottom-up/
